[gd_scene load_steps=2 format=3 uid="uid://binl84qqvsyx5"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_5aduo"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_5aduo")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -21.5
offset_right = 34.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Start"

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -102.0
offset_top = 123.0
offset_right = 109.0
offset_bottom = 178.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Rat Knight!"

[node name="MessageTimer" type="Timer" parent="."]

[node name="Label2" type="Label" parent="."]
offset_left = 432.0
offset_top = 398.0
offset_right = 700.0
offset_bottom = 447.0
text = "Left mouse click for Star attack
Right Mouse click for Sword Attack
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
